mall整合Swagger实现在线API文档

--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,12 @@
             <artifactId>hutool-all</artifactId>
             <version>${hutool.version}</version>
         </dependency>
+        <!--springfox swagger官方Starter-->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-boot-starter</artifactId>
+            <version>${springfox-swagger.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
